# LumosTool

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  FRAMEWORK_COMPLETE.md  GETTING_STARTED.md  H7_UPDATE.md  INSTALL.md  PHASE1_COMPLETE.md  PROJECT_DEFINITION_GUIDE.md  SIMPLE_BUILD_README.md  SIMPLE_VERSION_COMPLETE.md  TODO.md  arm_toochain.md  board_defs.md  install.sh  lumos  lumos_cli  notes.md
docker/: Dockerfile  Dockerfile.linux-dev  Dockerfile.linux-musl  Dockerfile.release  Dockerfile.windows  Dockerfile.windows-dev  mingw-w64-x86_64.cmake  setup_deps.sh
docs/: arm_gcc_compiler_flags.md  binary_naming.md  build_configuration.md  directory_structure.md  linux_portability.md  path_resolution.md  serial_robustness_improvements.md
example_i2c/: project.yaml
example_i2c/include/: i2c_config.h
example_layer/: CMakeLists.txt  README.md  uart_wrapper.cpp
example_project/: project.yaml
example_sdcard/: project.yaml
example_sdcard/src/: sdcard.c
example_spi/: README.md  project.yaml
example_spi/include/: spi_config.h
example_spi/src/: spi_config.c
example_uart/: project.yaml
example_uart/include/: uart_config.h
example_uart/src/: main.c
example_usb/include/: usb_device.h  usbd_desc.h
example_usb/src/: main.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
examples/: peripheral_examples.cpp
examples/example_adc/: main.cpp
examples/example_i2c/: README.md  project.yaml
examples/example_i2c/include/: i2c_config.h
examples/example_i2c/src/: i2c_config.c  main.c
examples/example_layer/: comparison_example.hpp  main_example.cpp  uart_wrapper.hpp
examples/example_micro_brain/: main.cpp
examples/example_new/: README.md  main.cpp  project.yaml  source_file.cpp
examples/example_project/: main.cpp  source_file.cpp  source_file.h
examples/example_sdcard/: README.md
examples/example_sdcard/include/: sdcard.h  spi_config.h
examples/example_sdcard/src/: main.c  spi_config.c
examples/example_simple/: README.md  main.cpp  project.yaml  source_file.h
examples/example_spi/include/: spi_config.h
examples/example_spi/src/: main.c
examples/example_timer/: main.cpp  test_tick_counter.cpp
examples/example_uart/: README.md  project.yaml
examples/example_uart/src/: uart_config.c
examples/example_usb/: project.yaml
examples/example_usb/include/: usbd_cdc_if.h  usbd_conf.h
examples/example_usb/src/: usb_device.c
examples/multi_can_network/device_node/: README.md  canfd_config_example.cpp  main.cpp  project.yaml
examples/multi_can_network/device_reader/: README.md  main.cpp  project.yaml
scripts/: README.md  cleanup_toolchain.sh  create_deb_release.py  create_linux_musl_release.py  create_linux_release.py  create_macos_release.py  create_rpm_release.py  create_windows_release.py  publish_release  publish_winget  start_testing_env_linux  start_testing_env_windows
src/applications/lumos/: CMakeLists.txt  cli.h  main.cpp
src/applications/lumos/config/: project_config.cpp  project_config.h
src/applications/lumos_future/: CMakeLists.txt  cli.cpp  main.cpp
src/applications/lumos_future/commands/: app_command.cpp  app_command.h  project_command.cpp  project_command.h
src/applications/lumos_simple/: CMakeLists.txt  builder.cpp  builder.h  cache_config.cpp  cache_config.h  hal_module_detector.cpp  hal_module_detector.h  main.cpp  project_config.cpp  project_config.h
src/applications/lumos_simple/serial/: serial_linux.cpp  stm32_communicator.cpp  stm32_communicator.h
src/applications/serial_gui/: CMakeLists.txt  flashworker.cpp  flashworker.h  main.cpp  mainwindow.cpp  mainwindow.h  serialmonitor.cpp  serialmonitor.h
src/applications/simple_serial/: CMakeLists.txt  main.cpp  serial.cpp  serial.h  serial_mac.cpp  serial_windows.cpp
src/boards/lumos_brain/: STM32H723VGTX_FLASH.ld  config.yaml  jst_shield.cpp  jst_shield.h  lumos.h  lumos_brain.cpp  lumos_brain.h  main.c  stm32h7xx_hal_conf.h  stm32h7xx_hal_msp.c  system_stm32h7xx.c
src/boards/lumos_micro_brain/: STM32G0B1CBUX_FLASH.ld  STM32G0B1CBUX_RAM.ld  config.yaml  lumos.h  lumos_micro_brain.cpp  lumos_micro_brain.h  main.c  stm32g0xx_hal_conf.h  stm32g0xx_hal_msp.c
src/boards/sx1281_module/: config.yaml  main.c  main.h  stm32h5xx_hal_msp.c  stm32h5xx_it.c  stm32h5xx_it.h  sx1281_module.cpp  sx1281_module.h
src/framework/: CMakeLists.txt  application.cpp  application.h
src/modules/serial/: CMakeLists.txt  lumos_bootloader.cpp  lumos_bootloader.h  serial.h  serial_linux.cpp  serial_mac.cpp  serial_windows.cpp
src/wrapper/: adc.cpp  adc.h  can.cpp  can.h  gpio.cpp  gpio.h  i2c.cpp  i2c.h  sd.cpp  sd.h  spi.cpp  spi.h  sys.cpp  sys.h  timer.cpp  timer.h  uart.cpp  uart.h  usb.cpp  usb.h
tests/: .gitignore  README.md
tests/system/: README.md  __init__.py  conftest.py  requirements.txt  run_tests.sh  test_init.py  test_version_help.py
